# amr-cw

./: .gitignore  README.md  bbcsport_GNN_CW_commands.sh  bbcsport_GNN_black-box_commands.sh  bbcsport_concept_gradient_importances_image_grid_script.py  bbcsport_concept_similarities_image_grid_script.py  bbcsport_graphs_cleanup.sh  bbcsport_plot_concept_gradient_importances.ipynb  bbcsport_plot_concept_similarities.ipynb  config.yaml  config_baseline.yaml  example_classification.py  example_classification_2.py  example_dataset.py  example_dataset_2.py  example_graph_utils_2.py  graph_classification.py  graph_classification_old.py  graph_concept_dataset.py  graph_concept_whitening.py  graph_dataset.py  graph_dataset_old.py  graph_models.py  graph_models_old.py  graph_utils.py  graphs_concepts_construction.py  hybrid_data_classification.py  hybrid_dataset.py  hybrid_models.py  iterative_normalization.py  iterative_normalization_modern.py  main.py  models.py  plot_concept_gradient_importances.ipynb  plot_concept_similarities.ipynb  plot_functions_graphs.py  pyproject.toml  run_multiseed.sh  ten_newsgroups_CW_commands.sh  ten_newsgroups_GNN_black-box_commands.sh  (+10 more)
.ipynb_checkpoints/: plot_concept_gradient_importances-checkpoint.ipynb  ten_newsgroups_plot_concept_similarities-checkpoint.ipynb
amr_cw/: main.py
checkpoints/: ten_newsgroups_business_entertainment_food_graphics_historical_gcn_conv_non_residual_weighted_closed_subgraphs_whitened_graph_model.pt  ten_newsgroups_gcn_conv_non_residual_graph_model.pt  (+3 more)
config/: config.yaml
scripts/: bbc_sports_dataset.py  main.py  (+16 more)
(+16334 files in other folders)
