[project]
name = "cw"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "amrlib==0.8.1",
    "boto3",
    "gensim",
    "matplotlib",
    "networkx",
    "numpy",
    "pandas",
    "penman==1.3.1",
    "pyyaml",
    "scikit-learn",
    "scipy",
    "seaborn",
    "smatch==1.0.4",
    "torch",
    "torch-geometric",
    "transformers",
    "unidecode==1.3.8",
]
